<resources>
    <string name="app_name">Centsation</string>
    <string name="app_easter_egg">You\'ve done this before, haven\'t you?</string>
    <string name="app_license">GNU General Public License v3.0</string>
    <string name="app_author">mowtiie</string>

    <string name="toolbar_main">Savings</string>
    <string name="toolbar_create">New saving</string>
    <string name="toolbar_edit">Edit saving</string>
    <string name="toolbar_archive">Archive</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_history">History</string>
    <string name="toolbar_about">About</string>

    <string name="link_app_source_code">https://github.com/mowtiie/Centsation</string>
    <string name="link_app_author">https://github.com/mowtiie</string>

    <string name="empty_indicator_main">No savings found</string>
    <string name="empty_indicator_archive">No archived savings</string>

    <string name="radio_button_deposit">Deposit</string>
    <string name="radio_button_withdraw">Withdraw</string>

    <string name="field_error_required">This field is required</string>
    <string name="field_error_empty_saving">Please enter a value</string>
    <string name="field_error_negative_saving">Saving cannot be negative</string>
    <string name="field_error_invalid_number">Please enter a valid number</string>

    <string name="field_saving_name">Name</string>
    <string name="field_saving_current_saving">Current Saving</string>
    <string name="field_transaction_amount">Amount</string>
    <string name="field_saving_goal">Goal</string>
    <string name="field_saving_notes">Notes</string>
    <string name="field_saving_deadline">Deadline</string>

    <string name="dialog_title_crash">App has crashed</string>
    <string name="dialog_title_request_alarm_permission">Required permission</string>
    <string name="dialog_title_create_saving">Create saving</string>
    <string name="dialog_title_edit_saving">Edit saving</string>
    <string name="dialog_title_delete_saving">Delete saving?</string>
    <string name="dialog_title_create_transaction">Create transaction</string>
    <string name="dialog_title_history_saving">History</string>

    <string name="dialog_message_crash">The app closed unexpectedly. You can help fix the issue by emailing the error report or saving it as a text file.</string>
    <string name="dialog_message_delete_saving">You are about to delete this saving, this action cannot be undone.</string>
    <string name="dialog_message_request_alarm_permission">Deadlines requires alarms and reminders permission to work properly. Please grant this permission.</string>

    <string name="dialog_button_crash_email">Email report</string>
    <string name="dialog_button_crash_save">Save to file</string>
    <string name="dialog_button_crash_dismiss">Dismiss</string>
    <string name="dialog_button_grant">Grant</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_create">Create</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_edit">Save</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_submit">Submit</string>

    <string name="menu_item_save">Save</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_overflow">More Options</string>
    <string name="menu_item_sort">Sort By</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_current_saving">Saving</string>
    <string name="menu_item_sort_goal">Goal</string>
    <string name="menu_item_sort_deadline">Deadline</string>
    <string name="menu_item_sort_ascending">Ascending</string>
    <string name="menu_item_sort_descending">Descending</string>

    <string name="toast_export_failed">Export failed</string>
    <string name="toast_import_failed">Import failed</string>
    <string name="toast_import_successful">Import successful</string>
    <string name="toast_export_successful">Export successful</string>
    <string name="toast_export_no_savings_found">No savings to export</string>
    <string name="toast_notification_permission_denied">Notification permission denied</string>
    <string name="toast_deny_import_notice">Deadlines may not work properly</string>

    <string name="tooltip_share">Share Notes</string>
    <string name="tooltip_update">New Transaction</string>
    <string name="tooltip_history">History</string>
    <string name="tooltip_archive">Archive</string>
    <string name="tooltip_unarchive">Unarchive</string>
    <string name="tooltip_delete">Delete</string>

    <string name="progress_exporting">Exporting savings…</string>
    <string name="progress_importing">Importing savings…</string>

    <string name="snack_bar_permission_notifications">Deadlines requires notification permissions to work.</string>

    <!-- Crash reporting -->
    <string name="developer_email" translatable="false">mowtiie.dev@gmail.com</string>
    <string name="crash_email_subject">Centsation crash report</string>
    <string name="crash_email_chooser_title">Send report via…</string>
    <string name="crash_save_toast_success">Crash report saved</string>
    <string name="crash_save_toast_failure">Couldn\'t save crash report</string>
    <string name="crash_no_email_app_toast">No email app installed</string>

    <!-- App Preference Category -->
    <string name="preference_category_appearance">Appearance</string>
    <string name="preference_list_theme">Theme</string>
    <string name="preference_list_contrast">Contrast</string>
    <string name="preference_switch_dynamic_colors_title">Dynamic Colors</string>
    <string name="preference_switch_dynamic_colors_summary">Apply colors from your wallpaper to the application theme</string>

    <!-- Savings Preference Category -->
    <string name="preference_category_savings">Savings</string>
    <string name="preference_list_currency">Currency</string>
    <string name="preference_list_deadline_format">Deadline Format</string>

    <!-- Security Preference Category -->
    <string name="preference_category_security">Security</string>
    <string name="preference_switch_screen_privacy_title">Screen Privacy</string>
    <string name="preference_switch_screen_privacy_summary">Prevents capturing of screenshots and screen recordings in the app</string>

    <!-- Backup Preference Category -->
    <string name="preference_category_backup">Backup</string>
    <string name="preference_import_title">Import</string>
    <string name="preference_import_summary">Import back your savings</string>
    <string name="preference_export_title">Export</string>
    <string name="preference_export_summary">Export your savings</string>

    <!--About Preference Category -->
    <string name="preference_category_about">About</string>
    <string name="preference_app_version">Version</string>
    <string name="preference_app_license">License</string>
    <string name="preference_app_source_code_title">Source Code</string>
    <string name="preference_app_source_code_summary">Check the Github repository and the README</string>
    <string name="preference_app_author">Author</string>

    <!-- Theme options -->
    <string name="theme_system">System Default</string>
    <string name="theme_battery">Battery Saving</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!-- Contrast options -->
    <string name="contrast_low">Low</string>
    <string name="contrast_medium">Medium</string>
    <string name="contrast_high">High</string>

    <!-- Deadline format examples -->
    <string name="deadline_format_eeee_mmmm_dd_yyyy">Tuesday, April 8 2025</string>
    <string name="deadline_format_mm_dd_yyyy">04/08/2025</string>
    <string name="deadline_format_dd_mm_yyyy">08/04/2025</string>
    <string name="deadline_format_yyyy_dd_mm">2025/08/04</string>
    <string name="deadline_format_yyyy_mm_dd">2025/04/08</string>
</resources>