<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="theme"
            android:title="@string/preference_list_theme"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_entry_values"
            android:defaultValue="System Default"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            android:key="contrast"
            android:title="@string/preference_list_contrast"
            android:entries="@array/contrast_entries"
            android:entryValues="@array/contrast_entry_values"
            android:defaultValue="contrast_low"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            android:key="dynamic_colors"
            android:widgetLayout="@layout/view_preference_switch"
            app:iconSpaceReserved="false"
            android:title="@string/preference_switch_dynamic_colors_title"
            android:summary="@string/preference_switch_dynamic_colors_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_savings"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="currency"
            android:title="@string/preference_list_currency"
            android:defaultValue="PHP"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            android:key="deadline_format"
            android:title="@string/preference_list_deadline_format"
            android:entries="@array/deadline_format_entries"
            android:entryValues="@array/deadline_format_entry_values"
            android:defaultValue="MM/dd/yyyy"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_category_security"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:key="screen_privacy"
            android:title="@string/preference_switch_screen_privacy_title"
            android:summary="@string/preference_switch_screen_privacy_summary"
            android:widgetLayout="@layout/view_preference_switch"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_backup"
        app:iconSpaceReserved="false">

        <Preference
            android:key="import"
            android:title="@string/preference_import_title"
            android:summary="@string/preference_import_summary"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="export"
            android:title="@string/preference_export_title"
            android:summary="@string/preference_export_summary"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>